Updated language translations.

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -87,7 +87,9 @@
   <string name="CallScreen_Incoming_call">مكالمة واردة</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">فشل في حفظ الصورة.</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
+  <string name="CameraContacts__menu_search">بحث</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">إزالة</string>
   <string name="ClearProfileActivity_remove_profile_photo">هل تود حذف صورة ملفك الشخصي ؟</string>
@@ -778,6 +780,11 @@
   <string name="WebRtcCallScreen_end_call">إنهاء المكالمة</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">انقر لدعم الفيديو</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">صورة جهة الاتصال</string>
+  <string name="WebRtcCallControls_speaker_button_description">مكبر الصوت.</string>
+  <string name="WebRtcCallControls_mute_button_description">حجب المكرفون.</string>
+  <string name="WebRtcCallControls_answer_call_description">الرد على المكالمة</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">صوت</string>
   <string name="attachment_type_selector__audio_description">صوت</string>
@@ -800,6 +807,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">إعادة العبارة السرية الجديدة</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">أدخل أسم أو رقم</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">لا توجد جهات اتصال.</string>
   <string name="contact_selection_group_activity__finding_contacts">تحميل جهات الاتصال...</string>
@@ -1007,8 +1015,6 @@
   <string name="recipient_preferences__ringtone">نغمة الرنين</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">مكالمة Signal</string>
-  <string name="redphone_call_controls__mute">صامت</string>
-  <string name="redphone_call_controls__flip_camera_rear">تبديل الكاميرا</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">رقم الهاتف</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">يمكن بسهولة عبر Signal من التواصل باستخدام رقم الهاتف الحالي وجهات الاتصال. يمكن لمن لديهم رقم هاتفك بالفعل من التواصل بسهولة عبر Signal. \n\n عملية التسجيل تقوم بنقل بعض بيانات الاتصال إلى الخادم بشكل مؤقت.</string>
