--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -75,6 +75,7 @@
   <string name="CallScreen_Incoming_call">Trucada rebuda</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">No s\'ha pogut desar la imatge.</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contactes recents</string>
   <string name="CameraContacts_signal_contacts">Contactes de Signal</string>
@@ -85,6 +86,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Només podeu usar el botó de la càmera per enviar fotografies a contactes de Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">No trobeu qui busqueu?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Convideu un contacte a Signal</string>
+  <string name="CameraContacts__menu_search">Cerca</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Suprimeix</string>
   <string name="ClearProfileActivity_remove_profile_photo">Voleu suprimir la foto de perfil?</string>
@@ -426,6 +428,7 @@
     <item quantity="one">No podeu compartir més de %d elements.</item>
     <item quantity="other">No podeu compartir més de %d elements.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Seleccioneu destinataris</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Tot el contingut</string>
   <!--MessageRecord-->
@@ -751,6 +754,11 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="WebRtcCallScreen_end_call">Finalitza la trucada</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Toqueu per inhabilitar el vídeo</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Foto del contacte</string>
+  <string name="WebRtcCallControls_speaker_button_description">Altaveu</string>
+  <string name="WebRtcCallControls_mute_button_description">Silencia</string>
+  <string name="WebRtcCallControls_answer_call_description">Respon la trucada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Àudio</string>
   <string name="attachment_type_selector__audio_description">Àudio</string>
@@ -773,6 +781,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="change_passphrase_activity__repeat_new_passphrase">Repetiu la contrasenya nova</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduïu un nom o número</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">No hi ha cap contacte.</string>
   <string name="contact_selection_group_activity__finding_contacts">S\'estan carregant els contactes...</string>
@@ -962,8 +971,6 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="recipient_preferences__ringtone">To de trucada</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Trucada del Signal</string>
-  <string name="redphone_call_controls__mute">Silencia</string>
-  <string name="redphone_call_controls__flip_camera_rear">Canvia les càmeres</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">NÚMERO DE TELÈFON</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">El Signal fa que comunicar-se sigui fàcil usant el vostre número de telèfon i el llibre d\'adreces. Les amistats i contactes que ja saben com contactar-vos pel número de telèfon us podran trobar fàcilment al Signal.\n\nEl registre tramet certa informació de contacte al servidor. No s\'emmagatzema.</string>
