--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -75,6 +75,7 @@
   <string name="CallScreen_Incoming_call">Εισερχόμενη κλήση</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Αποτυχία αποθήκευσης της εικόνας.</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Πρόσφατες επαφές</string>
   <string name="CameraContacts_signal_contacts">Επαφές Signal</string>
@@ -85,6 +86,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Μπορείτε να χρησιμοποιήσετε το κουμπί κάμερα για να στείλετε φωτογραφίες μόνο σε επαφές Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Δεν μπορείτε να βρείτε αυτό που ψάχνετε;</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Προσκαλέστε μια επαφή σας να έρθει στο Signal</string>
+  <string name="CameraContacts__menu_search">Αναζήτηση</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Αφαίρεση</string>
   <string name="ClearProfileActivity_remove_profile_photo">Αφαίρεση φωτογραφίας προφίλ?</string>
@@ -426,6 +428,7 @@
     <item quantity="one">Δεν μπορείτε να μοιραστείτε πάνω από %d αντικείμενο.</item>
     <item quantity="other">Δεν μπορείτε να μοιραστείτε πάνω από %d αντικείμενα.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Επιλογή παραληπτών/τριών</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Όλα τα πολυμέσα</string>
   <!--MessageRecord-->
@@ -752,6 +755,11 @@
   <string name="WebRtcCallScreen_end_call">Τερματισμός κλήσης</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Πατήστε για να ενεργοποιήσετε το βίντεό σας</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Φωτογραφία επαφής</string>
+  <string name="WebRtcCallControls_speaker_button_description">Μεγάφωνο</string>
+  <string name="WebRtcCallControls_mute_button_description">Σίγαση</string>
+  <string name="WebRtcCallControls_answer_call_description">Απάντηση</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Ήχος</string>
   <string name="attachment_type_selector__audio_description">Ήχος</string>
@@ -774,6 +782,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Νέο συνθηματικό (ξανά)</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Εισαγωγή ονόματος ή αριθμού</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Δεν υπάρχουν επαφές.</string>
   <string name="contact_selection_group_activity__finding_contacts">Φόρτωση των επαφών...</string>
@@ -963,8 +972,6 @@
   <string name="recipient_preferences__ringtone">Ήχος κλήσης</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Κλήση Signal</string>
-  <string name="redphone_call_controls__mute">Σίγαση</string>
-  <string name="redphone_call_controls__flip_camera_rear">Εναλλαγή Καμερών</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">ΑΡΙΘΜΟΣ ΚΙΝΗΤΟΥ</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Το Signal κάνει την επικοινωνία εύκολη χρησιμοποιόντας τον τηλεφωνικό αριθμό και τη λίστα επαφών σας. Φίλοι/ες και επαφές που έχουν ήδη τον αριθμό σας θα μπορούν να σας μιλήσουν εύκολα μέσω του Signal.\n\nΗ εγγραφή μεταδίδει προσωρινά μερικά στοιχεία επικοινωνίας στον διακομιστή. Δε θα αποθηκευτούν.</string>
