--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -75,6 +75,7 @@
   <string name="CallScreen_Incoming_call">Recebendo chamada</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Falha ao salvar imagem.</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contatos recentes</string>
   <string name="CameraContacts_signal_contacts">Contatos do Signal</string>
@@ -85,6 +86,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Você só pode usar o botão câmera para enviar fotos para contatos do Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Não achou quem você procurava?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Convidar um contato para entrar no Signal</string>
+  <string name="CameraContacts__menu_search">Buscar</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Remover</string>
   <string name="ClearProfileActivity_remove_profile_photo">Remover foto do perfil?</string>
@@ -426,6 +428,7 @@
     <item quantity="one">Você não pode compartilhar mais de %d item.</item>
     <item quantity="other">Você não pode compartilhar mais de %d itens.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Selecionar destinatários</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Todas as mídias</string>
   <!--MessageRecord-->
@@ -757,6 +760,11 @@
   <string name="WebRtcCallScreen_end_call">Terminar ligação</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Clique para habilitar seu vídeo</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Foto do contato</string>
+  <string name="WebRtcCallControls_speaker_button_description">Caixa de som</string>
+  <string name="WebRtcCallControls_mute_button_description">Mudo</string>
+  <string name="WebRtcCallControls_answer_call_description">Atender ligação</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Áudio</string>
   <string name="attachment_type_selector__audio_description">Áudio</string>
@@ -779,6 +787,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Repita a nova frase-chave</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Digite o nome ou número</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nenhum contato.</string>
   <string name="contact_selection_group_activity__finding_contacts">Carregando contatos...</string>
@@ -968,8 +977,6 @@
   <string name="recipient_preferences__ringtone">Toque</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Chamada do Signal</string>
-  <string name="redphone_call_controls__mute">Mudo</string>
-  <string name="redphone_call_controls__flip_camera_rear">Inverter câmera</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">NÚMERO DE TELEFONE</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">É fácil se comunicar com o Signal usando seu número de telefone e contatos já existentes. Quem já fala com você pelo celular também não terá dificuldade de entrar em contato pelo aplicativo.\n\nDurante o cadastro, algumas informações de contato são transmitidas para o servidor. Elas não são armazenadas.</string>
