--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -80,7 +80,9 @@
   <string name="CallScreen_Incoming_call">Вхідний виклик</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Помилка збереження зображення</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
+  <string name="CameraContacts__menu_search">Пошук</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Вилучити</string>
   <string name="ClearProfileActivity_remove_profile_photo">Видалити фото профіля?</string>
@@ -727,6 +729,11 @@
   <string name="WebRtcCallScreen_end_call">Завершити виклик</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Торкніться, щоб почати трансляцію відео</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Фото контакту</string>
+  <string name="WebRtcCallControls_speaker_button_description">Динамік</string>
+  <string name="WebRtcCallControls_mute_button_description">Без сповіщень</string>
+  <string name="WebRtcCallControls_answer_call_description">Відповісти на виклик</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Аудіо</string>
   <string name="attachment_type_selector__audio_description">Аудіо</string>
@@ -749,6 +756,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Повторіть нову фразу-пароль</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Ввести ім\'я або номер</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Контактів не знайдено.</string>
   <string name="contact_selection_group_activity__finding_contacts">Завантаження контактів...</string>
@@ -946,8 +954,6 @@
   <string name="recipient_preferences__ringtone">Мелодія дзвінка</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Виклик Signal </string>
-  <string name="redphone_call_controls__mute">Без звуку</string>
-  <string name="redphone_call_controls__flip_camera_rear">Перемикання камер</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">НОМЕР ТЕЛЕФОНУ</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">З Signal дуже легко спілкуватися маючи лише телефонну книги. Друзі та контакти з якими ви вже спілкуєтесь телефоном зможуть легко початки користуватись Signal.\n\nПід час реєстрації передається деяка інформація на сервер але вона не зберігається.</string>
