--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal bezonas la Fotilo-permeson por preni fotojn, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“, kaj ŝalti „Fotilo“.</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Alŝuto de aŭdvidaĵo...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Densigo de la videaĵo...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eraro dum ludo de sonaĵo!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,10 @@
   <string name="CallScreen_Incoming_call">Envena alvoko</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Eraro dum konservo de bildo.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Ekkapti</string>
+  <string name="CameraXFragment_change_camera_description">Elekti alian fotilon</string>
+  <string name="CameraXFragment_open_gallery_description">Malfermi la galerion</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Lastaj kontaktoj</string>
   <string name="CameraContacts_signal_contacts">Signal-kontaktoj</string>
@@ -85,6 +90,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">La fotilo-butono uzeblas nur por sendi fotojn al Signal-kontaktoj.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Ĉu vi ne trovas, kion vi serĉas?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Inviti kontakton uzi Signal-on</string>
+  <string name="CameraContacts__menu_search">Serĉi</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Forviŝi</string>
   <string name="ClearProfileActivity_remove_profile_photo">Ĉu forviŝi profilan foton?</string>
@@ -208,7 +214,7 @@
     <item quantity="one">Konservado de kunsendaĵo al konservejo...</item>
     <item quantity="other">Konservado de %1$d kunsendaĵoj al konservejo...</item>
   </plurals>
-  <string name="ConversationFragment_pending">Okazonte...</string>
+  <string name="ConversationFragment_pending">Pritraktota...</string>
   <string name="ConversationFragment_push">Datumoj (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
@@ -254,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Profila nomo</string>
   <string name="CreateProfileActivity_set_up_your_profile">Agordi vian profilon</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profiloj estas tutvojaj ĉifritaj, kaj la Signal-servo neniam povas aliri al tiu informo.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Difini la avataron</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Uzante propran: %s</string>
   <string name="CustomDefaultPreference_using_default">Uzante defaŭltan: %s</string>
@@ -411,6 +418,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Eraro dum elŝuto de MMS-mesaĝo, tuŝetu por reprovi</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Sendi al %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Malfermi la fotilon</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tuŝeto por elekti</string>
   <!--MediaSendActivity-->
@@ -426,6 +434,7 @@
     <item quantity="one">Vi ne povas kunhavigi pli ol %d elementon.</item>
     <item quantity="other">Vi ne povas kunhavigi pli ol %d elementojn.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Elekti ricevontojn</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Ĉiuj aŭvidaĵoj</string>
   <!--MessageRecord-->
@@ -756,6 +765,15 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="WebRtcCallScreen_end_call">Fini alvokon</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Tuŝetu por ebligi vian videon</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Kontakta bildo</string>
+  <string name="WebRtcCallControls_speaker_button_description">Laŭtparolilo</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bludento</string>
+  <string name="WebRtcCallControls_mute_button_description">Silentigi</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Via fotilo</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Uzi la dorsan fotilon</string>
+  <string name="WebRtcCallControls_answer_call_description">Respondi alvokon</string>
+  <string name="WebRtcCallControls_reject_call_description">Rifuzi alvokon</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Sonaĵo</string>
   <string name="attachment_type_selector__audio_description">Sonaĵo</string>
@@ -778,6 +796,10 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="change_passphrase_activity__repeat_new_passphrase">Retajpu novan pasfrazon</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Entajpu nomon aŭ numeron</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Viŝi la entajpitan tekston</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Montri la klavaron</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Montri la numerumilon</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Neniu kontakto.</string>
   <string name="contact_selection_group_activity__finding_contacts">Ŝargo de kontaktoj...</string>
@@ -967,8 +989,6 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="recipient_preferences__ringtone">Sonoro</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signal-alvoko</string>
-  <string name="redphone_call_controls__mute">Silentigi</string>
-  <string name="redphone_call_controls__flip_camera_rear">Interŝanĝi fotilojn</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">TELEFONNUMERO</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Signal faciligas komunikon uzante vian ekzistantan telefonnumeron kaj adresaron. Amikoj kaj kontaktoj, kiuj jam scias, kiel telefoni vin, facile kontaktos vin per Signal.\n\nRegistrado sendas kontaktajn informojn al la servilo: ili ne estas konservitaj.</string>
@@ -1186,6 +1206,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="conversation_list_batch_archive__menu_archive_selected">Enarĥivigi elektitajn</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Elarĥivigi elektitajn</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Ŝparvojo al agordoj</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontakta bildo</string>
   <string name="conversation_list_item_view__archived">Enarĥivigitaj</string>
@@ -1193,6 +1214,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Nul. Malĉio. Eĉ ne unu.\nVia ricevujo malplenas!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nova interparolo</string>
+  <string name="conversation_list_fragment__open_camera_description">Malfermi la fotilon</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Donu al via ricevujo ion rakonti. Ekmesaĝu amikon!</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Restarigi sekuran seancon</string>
@@ -1260,12 +1282,12 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <!--redphone_audio_popup_menu-->
   <!--Trimmer-->
   <string name="trimmer__deleting">Forviŝado</string>
-  <string name="trimmer__deleting_old_messages">Forviŝante malnovajn mesaĝojn...</string>
+  <string name="trimmer__deleting_old_messages">Forviŝado de malnovaj mesaĝoj...</string>
   <string name="trimmer__old_messages_successfully_deleted">Malnovaj mesaĝoj sukcese forviŝiĝis</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Piktogramo pri sendometodo</string>
-  <string name="ConversationListFragment_loading">Ŝargante...</string>
-  <string name="CallNotificationBuilder_connecting">Konektante...</string>
+  <string name="ConversationListFragment_loading">Ŝargado...</string>
+  <string name="CallNotificationBuilder_connecting">Konekto...</string>
   <string name="Permissions_permission_required">Permeso bezonata</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal bezonas SMS-permeson por sendi SMS-on, sed ĝi estis porĉiame malakceptita. Bonvolu daŭrigi al la aplikaĵaj agordoj, elekti „Permesoj“ kaj ŝalti „SMS“.</string>
   <string name="Permissions_continue">Daŭrigi</string>
@@ -1290,7 +1312,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="RegistrationActivity_restore">Restaŭri</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Ne eblas importi savkopiojn el pli novaj versioj de Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Neĝusta savkopia pasfrazo</string>
-  <string name="RegistrationActivity_checking">Kontrolante...</string>
+  <string name="RegistrationActivity_checking">Kontrolo...</string>
   <string name="RegistrationActivity_d_messages_so_far">%d mesaĝoj ĝis nun...</string>
   <string name="RegistrationActivity_restore_from_backup">Restaŭri el savkopio?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Restaŭri viajn mesaĝojn kaj aŭdvidaĵojn el loka savkopio. Se vi ne restaŭras nun, vi ne povos restaŭri poste.</string>
