--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal necesita acceso a la cámara para tomar fotos y verificar las cifras de seguridad de tus chats. Por favor, ve al menú de configuración de la aplicación, selecciona «Permisos» y activa «Cámara».</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Subiendo archivo ...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Comprimiendo vídeo ...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">¡Fallo al reproducir sonido!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,10 @@
   <string name="CallScreen_Incoming_call">Llamada entrante</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Fallo al guardar la imagen.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Captura</string>
+  <string name="CameraXFragment_change_camera_description">Cambiar cámara</string>
+  <string name="CameraXFragment_open_gallery_description">Abrir galería de fotos</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Contactos recientes</string>
   <string name="CameraContacts_signal_contacts">Contactos de Signal</string>
@@ -85,6 +90,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Sólo puedes usar el botón de ma cámara para enviar fotos a contactos en Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">¿No encuentras a quien buscas?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Invita a un contacto a usar Signal</string>
+  <string name="CameraContacts__menu_search">Buscar</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eliminar</string>
   <string name="ClearProfileActivity_remove_profile_photo">¿Eliminar foto de perfil?</string>
@@ -254,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Nombre de perfil</string>
   <string name="CreateProfileActivity_set_up_your_profile">Completa tu perfil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Los perfiles de Signal están cifrados de punto a punto por lo que el servidor de Signal no tiene acceso a ningún dato.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Configurar avatar del perfil</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Usar personalizado: %s</string>
   <string name="CustomDefaultPreference_using_default">Usar predeterminado: %s</string>
@@ -411,6 +418,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Fallo al descargar mensaje MMS, toca para reintentar</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Enviar a %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Abrir cámara</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Toca para seleccionar</string>
   <!--MediaSendActivity-->
@@ -426,6 +434,7 @@
     <item quantity="one">No se puede compartir más de %d objeto.</item>
     <item quantity="other">No se pueden compartir más de %d objetos.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Seleccionar contactos</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Archivos multimedia</string>
   <!--MessageRecord-->
@@ -757,6 +766,15 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="WebRtcCallScreen_end_call">Finalizar llamada</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Toca para activar tu vídeo</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Foto de contacto</string>
+  <string name="WebRtcCallControls_speaker_button_description">Altavoz del dispositivo</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
+  <string name="WebRtcCallControls_mute_button_description">Silenciar</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Cámara de este dispositivo</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Cambiar a cámara trasera</string>
+  <string name="WebRtcCallControls_answer_call_description">Contestar llamada</string>
+  <string name="WebRtcCallControls_reject_call_description">Rechazar llamada</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -779,6 +797,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="change_passphrase_activity__repeat_new_passphrase">Repetir nueva clave de acceso</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Introduce un nombre o número</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Eliminar texto introducido</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Mostrar teclado</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Mostrar teclado numérico</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">No hay contactos.</string>
   <string name="contact_selection_group_activity__finding_contacts">Cargando contactos ...</string>
@@ -956,7 +978,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--recipient_preferences-->
   <string name="recipient_preferences__mute_conversation">Silenciar chat</string>
   <string name="recipient_preferences__custom_notifications">Notificaciones personalizadas</string>
-  <string name="recipient_preferences__custom_notifications_settings">Preferencias de notificaciones del sistema</string>
+  <string name="recipient_preferences__custom_notifications_settings">Ajustes de notificaciones del sistema</string>
   <string name="recipient_preferences__notification_sound">Sonido de notificaciones</string>
   <string name="recipient_preferences__vibrate">Vibración</string>
   <string name="recipient_preferences__block">Bloquear</string>
@@ -964,12 +986,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="recipient_preferences__view_safety_number">Ver cifras de seguridad</string>
   <string name="recipient_preferences__chat_settings">Ajustes del chat</string>
   <string name="recipient_preferences__privacy">Privacidad</string>
-  <string name="recipient_preferences__call_settings">Configuración de llamada</string>
+  <string name="recipient_preferences__call_settings">Ajustes de llamada</string>
   <string name="recipient_preferences__ringtone">Tono de llamada</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Llamada de Signal</string>
-  <string name="redphone_call_controls__mute">Silenciar</string>
-  <string name="redphone_call_controls__flip_camera_rear">Rotar cámara</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">NÚMERO DE TELÉFONO</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Signal hace fácil la comunicación usando tu número de teléfono y lista de contactos existentes. Los amigos y contactos que ya conocen tu teléfono podrán ponerse en contacto contigo a través de Signal.\n\nEl proceso de registro transmite alguna información acerca de tus contactos al servidor pero no se almacena.</string>
@@ -1067,7 +1087,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences__inactivity_timeout_passphrase">Clave de acceso por inactividad</string>
   <string name="preferences__inactivity_timeout_interval">Intervalo para suspensión por inactividad</string>
   <string name="preferences__notifications">Notificaciones</string>
-  <string name="preferences__system_notification_settings">Preferencias de notificaciones del sistema</string>
+  <string name="preferences__system_notification_settings">Ajustes de notificaciones del sistema</string>
   <string name="preferences__led_color">Color del LED</string>
   <string name="preferences__led_color_unknown">Desconocido</string>
   <string name="preferences__pref_led_blink_title">Patrón de parpadeo del LED</string>
@@ -1187,6 +1207,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="conversation_list_batch_archive__menu_archive_selected">Archivo seleccionado</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Archivo deseleccionado</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Atajo a ajustes</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto de contacto</string>
   <string name="conversation_list_item_view__archived">Archivado</string>
@@ -1195,6 +1216,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
 ¡Esto es todo!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nuevo chat</string>
+  <string name="conversation_list_fragment__open_camera_description">Abrir cámara</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dale a tu buzón de entrada una razón de ser. Comienza a chatear con un amigo.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Reiniciar sesión segura</string>
@@ -1207,7 +1229,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="conversation__menu_edit_group">Editar grupo</string>
   <string name="conversation__menu_leave_group">Abandonar grupo</string>
   <string name="conversation__menu_view_all_media">Todos los archivos multimedia</string>
-  <string name="conversation__menu_conversation_settings">Opciones de chat</string>
+  <string name="conversation__menu_conversation_settings">Ajustes de chat</string>
   <string name="conversation__menu_add_shortcut">Añadir a la pantalla de inicio</string>
   <!--conversation_popup-->
   <string name="conversation_popup__menu_expand_popup">Expandir chat emergente</string>
@@ -1220,7 +1242,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="conversation_group_options__broadcast">Transmisión</string>
   <!--text_secure_normal-->
   <string name="text_secure_normal__menu_new_group">Nuevo grupo</string>
-  <string name="text_secure_normal__menu_settings">Preferencias</string>
+  <string name="text_secure_normal__menu_settings">Configuración</string>
   <string name="text_secure_normal__menu_clear_passphrase">Bloquear</string>
   <string name="text_secure_normal__mark_all_as_read">Marcar todos como leídos</string>
   <string name="text_secure_normal__invite_friends">Invitar amigos</string>
