--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal vajab fotode tegemiseks ligipääsu seadme kaamerale, kuid see on püsivalt keelatud. Palun ava rakenduse sätete menüü, vali \"Õigused\" ja luba \"Kaamera\".</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Meedia üleslaadimine...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Video tihendamine...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Heli esitamisel tekkis viga!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,10 @@
   <string name="CallScreen_Incoming_call">Sissetulev kõne</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Pildi salvestamine ebaõnnestus.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Pildista</string>
+  <string name="CameraXFragment_change_camera_description">Vaheta kaamerat</string>
+  <string name="CameraXFragment_open_gallery_description">Ava galerii</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Hiljutised kontaktid</string>
   <string name="CameraContacts_signal_contacts">Signali kontaktid</string>
@@ -85,6 +90,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Sa saad kasutada vaid kaameranuppu, et saata fotosid Signali kontaktidele.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Ei leia, keda otsid?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Kutsu kontakt Signaliga liituma</string>
+  <string name="CameraContacts__menu_search">Otsi</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eemalda</string>
   <string name="ClearProfileActivity_remove_profile_photo">Eemaldad profiilipildi?</string>
@@ -254,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Profiili nimi</string>
   <string name="CreateProfileActivity_set_up_your_profile">Seadista oma profiil</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signali profiilid on otspunktkrüpteeritud ning Signali teenusel ei ole kunagi sellele teabele juurdepääsu.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Määra profiilipildiks</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Kasutan kohandatud: %s</string>
   <string name="CustomDefaultPreference_using_default">Kasutan vaikimisi: %s</string>
@@ -411,6 +418,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">MMS-sõnumi allalaadimisel tekkis viga, koputa uuesti proovimiseks</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Saada kohta %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Ava kaamera</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Koputa valimiseks</string>
   <!--MediaSendActivity-->
@@ -426,6 +434,7 @@
     <item quantity="one">Sa ei saa jagada rohkem kui %d üksust.</item>
     <item quantity="other">Sa ei saa jagada rohkem kui %d üksust.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Vali saajad</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Kogu meedia</string>
   <!--MessageRecord-->
@@ -757,6 +766,15 @@
   <string name="WebRtcCallScreen_end_call">Lõpeta kõne</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Koputa, et lubada oma video</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Kontakti foto</string>
+  <string name="WebRtcCallControls_speaker_button_description">Valjuhääldi</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
+  <string name="WebRtcCallControls_mute_button_description">Vaigista</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Sinu kaamera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Vaheta tagakaamerale</string>
+  <string name="WebRtcCallControls_answer_call_description">Vasta kõnele</string>
+  <string name="WebRtcCallControls_reject_call_description">Keeldu kõnest</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Heli</string>
   <string name="attachment_type_selector__audio_description">Heli</string>
@@ -779,6 +797,10 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">Korda uut salaväljendit</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Sisesta nimi või number</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Tühjenda sisestatud tekst</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Kuva klaviatuuri</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Kuva klahvistikku</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Kontakte pole.</string>
   <string name="contact_selection_group_activity__finding_contacts">Laadin kontakte...</string>
@@ -968,8 +990,6 @@
   <string name="recipient_preferences__ringtone">Helin</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signali kõne</string>
-  <string name="redphone_call_controls__mute">Vaigista</string>
-  <string name="redphone_call_controls__flip_camera_rear">Vaheta kaameraid</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">TELEFONINUMBER</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Signal teeb suhtlemise lihtsaks, kasutades olemasolevat telefoninumbrit ja aadressiraamatut. Sõbrad ja kontaktid, kes juba saavad sinuga telefoni teel ühendust, saavad ka Signali kaudu seda teha.\n\nRegistreerimine saadab osalist kontaktinfot serverile, seda ei salvestata.</string>
@@ -1187,6 +1207,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Arhiveeri valitud</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Võta valitud arhiivist välja</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Seadete otsetee</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontakti foto pilt</string>
   <string name="conversation_list_item_view__archived">Arhiveeritud</string>
@@ -1194,6 +1215,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zip. Zilch. Null. Nada.\nKõik on loetud!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Uus vestlus</string>
+  <string name="conversation_list_fragment__open_camera_description">Ava kaamera</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Lisa oma postkasti midagi, näiteks alusta sõbraga sõnumite vahetamist.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Lähtesta turvaline sessioon</string>
