--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">A Signal-nak szüksége van a Kamera engedélyre, hogy fotókat készíthessen, de ez jelenleg meg van tagadva. Kérlek menj az alkalmazásbeállításokhoz, válaszd az \"Engedélyek\"-et és engedélyezd a \"Kamera\"-t.</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Médiafájl feltöltése...</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Videó tömörítése...</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Hiba történt a hang lejátszása során!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,10 @@
   <string name="CallScreen_Incoming_call">Bejövő hívás</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Nem sikerült elmenteni a képet.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Rögzítés</string>
+  <string name="CameraXFragment_change_camera_description">Kamera váltása</string>
+  <string name="CameraXFragment_open_gallery_description">Galéria megnyitása</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Friss kontaktok</string>
   <string name="CameraContacts_signal_contacts">Signal kontaktok</string>
@@ -85,6 +90,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">A kamera gombbal csak Signal kontaktoknak küldhetsz fotókat.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Nem találod, akit keresel?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Hívd meg egy ismerősödet Signal-ra!</string>
+  <string name="CameraContacts__menu_search">Keresés</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eltávolítás</string>
   <string name="ClearProfileActivity_remove_profile_photo">Eltávolítod a profilképed?</string>
@@ -255,6 +261,7 @@
   <string name="CreateProfileActivity_profile_name">Profil név</string>
   <string name="CreateProfileActivity_set_up_your_profile">Profilod beállítása</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">A Signal profilok végponttól végpontig titkosítva vannak, így a Signal szolgáltatás sosem férhet hozzá ezekhez az adatokhoz.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Profilkép beállítása</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Egyéni használata: %s</string>
   <string name="CustomDefaultPreference_using_default">Alapértelmezett használata: %s</string>
@@ -412,6 +419,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Hiba történt az MMS üzenet letöltése során, koppints az újrapróbálkozáshoz</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Küldés neki: %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Kamera megnyitása</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Koppints a kiválasztáshoz</string>
   <!--MediaSendActivity-->
@@ -427,6 +435,7 @@
     <item quantity="one">Nem oszthatsz meg többet, mint %d db elem.</item>
     <item quantity="other">Nem oszthatsz meg többet, mint %d db elem.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Címzettek kiválasztása</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Összes médiafájl</string>
   <!--MessageRecord-->
@@ -760,6 +769,15 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="WebRtcCallScreen_end_call">Hívás befejezése</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Koppints a videód engedélyezéséhez</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Kontakt fotó</string>
+  <string name="WebRtcCallControls_speaker_button_description">Hangszóró</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
+  <string name="WebRtcCallControls_mute_button_description">Némítás</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Saját kamerád</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Váltás hátsó kamerára</string>
+  <string name="WebRtcCallControls_answer_call_description">Hívás felvétele</string>
+  <string name="WebRtcCallControls_reject_call_description">Hívás elutasítása</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Hang</string>
   <string name="attachment_type_selector__audio_description">Hang</string>
@@ -782,6 +800,10 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="change_passphrase_activity__repeat_new_passphrase">Új jelmondat megismétlése</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Adj meg nevet vagy számot</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Beírt szöveg törlése</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Billentyázet megjelenítése</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Tárcsázó megjelenítése</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Nincsenek kontaktok.</string>
   <string name="contact_selection_group_activity__finding_contacts">Kontaktok betöltése...</string>
@@ -971,8 +993,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="recipient_preferences__ringtone">Csengőhang</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signal hívás</string>
-  <string name="redphone_call_controls__mute">Némítás</string>
-  <string name="redphone_call_controls__flip_camera_rear">Kameraváltás</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">TELEFONSZÁM</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">A Signal jelenlegi telefonszámod és címjegyzéked felhasználásával adatainak egyszerűvé teszi a kommunikációt. Azon barátaid és ismerőseid, akik már tudják, hogy hogyan érhetnek el telefonon, a jövőben Signal-on is könnyedén megtalálnak.\n\nA regisztráció során néhány névjegyadat is továbbításra kerül a kiszolgálónak. Az adatokat nem tároljuk.</string>
@@ -1197,6 +1217,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Zéró. Nulla. Semmi.\nMindet elolvastad!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Új beszélgetés</string>
+  <string name="conversation_list_fragment__open_camera_description">Kamera megnyitása</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Dobj a postaládádba valamit, hogy ne legyen olyan magányos! Láss hozzá, és üzenj egy barátodnak!</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Biztonságos munkamenet újraindítása</string>
