--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -62,6 +62,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal heeft toegang nodig tot de camera om foto\'s te kunnen maken, maar deze toegang is pertinent geweigerd. Ga naar de instellingen, selecteer ‘Toestemmingen’ en schakel ‘Camera’ in.</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Media aan het uploaden…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Video aan het comprimeren…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fout bij afspelen van audio!</string>
   <!--BlockedContactsActivity-->
@@ -75,6 +76,10 @@
   <string name="CallScreen_Incoming_call">Inkomende oproep</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Afbeelding opslaan mislukt.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Opnemen</string>
+  <string name="CameraXFragment_change_camera_description">Camera wisselen</string>
+  <string name="CameraXFragment_open_gallery_description">Galerij openen</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Recente contactpersonen</string>
   <string name="CameraContacts_signal_contacts">Signal-gebruikers</string>
@@ -85,6 +90,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Je kunt de cameraknop alleen gebruiken om foto\'s te verzenden aan Signal-gebruikers.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Kun je niet vinden waar je naar zoekt?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Nodig een contactpersoon uit om ook Signal te gebruiken</string>
+  <string name="CameraContacts__menu_search">Zoek</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Verwijderen</string>
   <string name="ClearProfileActivity_remove_profile_photo">Profielfoto verwijderen?</string>
@@ -254,6 +260,7 @@
   <string name="CreateProfileActivity_profile_name">Profielnaam</string>
   <string name="CreateProfileActivity_set_up_your_profile">Stel je profiel op</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Signal-profielen zijn eind-tot-eind-versleuteld, dus zelfs de Signal-dienst heeft nooit toegang tot profielinformatie. Je profiel word alleen getoond aan mensen wie ook in jouw contactenlijst staan en aan mensen aan wie je expliciet toestemming hebt gegeven door op de banier \"Je profielfoto en naam zichtbaar maken\" te tikken.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Avatar instellen</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Aanpassing in gebruik: %s</string>
   <string name="CustomDefaultPreference_using_default">Standaard in gebruik: %s</string>
@@ -412,6 +419,7 @@ weergaven.</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Fout bij downloaden van mms-bericht, tik om opnieuw te proberen</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Verzenden naar %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Camera openen</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tik om te selecteren</string>
   <!--MediaSendActivity-->
@@ -427,6 +435,7 @@ weergaven.</string>
     <item quantity="one">Je kan niet meer dan %d item delen.</item>
     <item quantity="other">Je kunt niet meer dan %d items delen.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Selecteer Signal-gebruikers</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Alle media</string>
   <!--MessageRecord-->
@@ -759,6 +768,15 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="WebRtcCallScreen_end_call">Oproep beëindigen</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Tik om je video in te schakelen</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Foto van contactpersoon</string>
+  <string name="WebRtcCallControls_speaker_button_description">Luidspreker</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
+  <string name="WebRtcCallControls_mute_button_description">Dempen</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Jouw camera</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Wisselen naar camera achter</string>
+  <string name="WebRtcCallControls_answer_call_description">Oproep beantwoorden</string>
+  <string name="WebRtcCallControls_reject_call_description">Oproep afwijzen</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Audio</string>
   <string name="attachment_type_selector__audio_description">Audio</string>
@@ -781,6 +799,10 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="change_passphrase_activity__repeat_new_passphrase">Herhaal nieuw wachtwoord</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Typ naam of nummer</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Ingevoerde tekst wissen</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Toetsenbord weergeven</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Numeriek toetsenblok weergeven</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Geen contactpersonen.</string>
   <string name="contact_selection_group_activity__finding_contacts">Contactpersonen laden…</string>
@@ -970,8 +992,6 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="recipient_preferences__ringtone">Beltoon</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signal-oproep</string>
-  <string name="redphone_call_controls__mute">Dempen</string>
-  <string name="redphone_call_controls__flip_camera_rear">Andere camera</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">TELEFOONNUMMER</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Signal maakt het eenvoudig om gesprekken te beginnen vanuit je contactenlijst. En omdat Signal je nummer registreert, zullen vrienden en contactpersonen die jouw nummer al hebben kunnen zien dat jij Signal gebruikt.\n\nOm dat mogelijk te maken wordt tijdens het registratieproces enige contactinformatie gedeeld met de server. Die informatie zal niet worden bewaard.</string>
@@ -1189,6 +1209,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="conversation_list_batch_archive__menu_archive_selected">Selectie archiveren</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Selectie dearchiveren</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Snelkoppeling naar instellingen</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Afbeelding van contactpersoon</string>
   <string name="conversation_list_item_view__archived">Gearchiveerd</string>
@@ -1196,6 +1217,7 @@ Signal heeft ook toegang nodig tot de media op je apparaat, om bestanden bij te 
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Niks, nada, noppes.\nJe bent helemaal mee!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Nieuw gesprek</string>
+  <string name="conversation_list_fragment__open_camera_description">Camera openen</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Geef je postvak iets om over naar huis te schrijven. Begin door een vriend of kennis een bericht te zenden.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Beveiligde sessie opnieuw instellen</string>
