--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -68,6 +68,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal требуется разрешение на доступ к камере, чтобы делать фото, но оно было вами отклонено. Пожалуйста, перейдите в Настройки, выберите «Приложения», найдите Signal, затем выберите «Разрешения» и включите «Камера».</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">Загрузка медиа…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">Сжатие видео…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Ошибка при воспроизведении аудио!</string>
   <!--BlockedContactsActivity-->
@@ -81,6 +82,10 @@
   <string name="CallScreen_Incoming_call">Входящий звонок</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Не удалось сохранить изображение.</string>
+  <!--CameraXFragment-->
+  <string name="CameraXFragment_capture_description">Снять</string>
+  <string name="CameraXFragment_change_camera_description">Сменить камеру</string>
+  <string name="CameraXFragment_open_gallery_description">Открыть галерею</string>
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">Недавние контакты</string>
   <string name="CameraContacts_signal_contacts">Контакты Signal</string>
@@ -91,6 +96,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">Вы можете использовать кнопку камеры, чтобы отправлять фотографии только контактам, которые являются пользователями Signal.</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">Не можете найти того, кого ищете?</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">Пригласите контакт в Signal</string>
+  <string name="CameraContacts__menu_search">Поиск</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Удалить</string>
   <string name="ClearProfileActivity_remove_profile_photo">Удалить фото профиля?</string>
@@ -282,6 +288,7 @@
   <string name="CreateProfileActivity_profile_name">Имя профиля</string>
   <string name="CreateProfileActivity_set_up_your_profile">Настройте свой профиль</string>
   <string name="CreateProfileActivity_signal_profiles_are_end_to_end_encrypted">Профили Signal защищены сквозным шифрованием, и сервис Signal никогда не имеет доступа к этой информации.</string>
+  <string name="CreateProfileActivity_set_avatar_description">Установить аватар</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">Пользовательское: %s</string>
   <string name="CustomDefaultPreference_using_default">Используется по умолчанию: %s</string>
@@ -447,6 +454,7 @@
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Ошибка при скачивании MMS-сообщения; нажмите, чтобы попробовать еще раз</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Отправить %s</string>
+  <string name="MediaPickerActivity__menu_open_camera">Открыть камеру</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Нажмите, чтобы выбрать</string>
   <!--MediaSendActivity-->
@@ -464,6 +472,7 @@
     <item quantity="many">Вы не можете поделиться больше, чем %d элементами.</item>
     <item quantity="other">Вы не можете поделиться больше, чем %d элементами.</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">Выберите получателей</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Все медиа</string>
   <!--MessageRecord-->
@@ -793,6 +802,15 @@
   <string name="WebRtcCallScreen_end_call">Завершить звонок</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">Нажмите, чтобы включить свое видео</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">Фотография контакта</string>
+  <string name="WebRtcCallControls_speaker_button_description">Динамик</string>
+  <string name="WebRtcCallControls_bluetooth_button_description">Bluetooth</string>
+  <string name="WebRtcCallControls_mute_button_description">Отключить микрофон</string>
+  <string name="WebRtcCallControls_your_camera_button_description">Ваша камера</string>
+  <string name="WebRtcCallControls_switch_to_rear_camera_button_description">Переключиться на заднюю камеру</string>
+  <string name="WebRtcCallControls_answer_call_description">Ответить на звонок</string>
+  <string name="WebRtcCallControls_reject_call_description">Отклонить звонок</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">Аудио</string>
   <string name="attachment_type_selector__audio_description">Аудио</string>
@@ -815,6 +833,10 @@
   <string name="change_passphrase_activity__repeat_new_passphrase"> Повторите новую парольную фразу</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">Введите имя или номер</string>
+  <!--contact_filter_toolbar-->
+  <string name="contact_filter_toolbar__clear_entered_text_description">Очистить введенный текст</string>
+  <string name="contact_filter_toolbar__show_keyboard_description">Показать клавиатуру</string>
+  <string name="contact_filter_toolbar__show_dial_pad_description">Показать панель набора номера</string>
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">Нет контактов.</string>
   <string name="contact_selection_group_activity__finding_contacts">Загрузка контактов...</string>
@@ -1018,8 +1040,6 @@
   <string name="recipient_preferences__ringtone">Мелодия</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Звонок Signal</string>
-  <string name="redphone_call_controls__mute">Откл. звук</string>
-  <string name="redphone_call_controls__flip_camera_rear">Переключить камеру</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">НОМЕР ТЕЛЕФОНА</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Чтобы упростить общение, Signal использует ваши существующие номер телефона и адресную книгу. Друзья и контакты, которые уже знают, как связаться с вами по телефону, с легкостью смогут связаться с вами и через Signal.\n\nПри регистрации на сервер передается некоторая информация о контактах, но она там не сохраняется.</string>
@@ -1239,6 +1259,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Архивировать выбранное</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Разархивировать выбранное</string>
   <!--conversation_list-->
+  <string name="conversation_list_settings_shortcut">Ярлык настроек</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Фотография контакта</string>
   <string name="conversation_list_item_view__archived">В архиве</string>
@@ -1246,6 +1267,7 @@
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">Ничего нет. Вы все догнали!</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">Новый разговор</string>
+  <string name="conversation_list_fragment__open_camera_description">Открыть камеру</string>
   <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">Дайте своим входящим кое-что, о чем можно написать домой. Начните, отправив сообщение другу.</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Сбросить защищенный сеанс</string>
