--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -72,6 +72,7 @@
   <string name="CallScreen_Incoming_call">来电呼叫</string>
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">未能保存图像。</string>
+  <!--CameraXFragment-->
   <!--CameraContacts-->
   <string name="CameraContacts_recent_contacts">最近联系人</string>
   <string name="CameraContacts_signal_contacts">Signal 联系人</string>
@@ -82,6 +83,7 @@
   <string name="CameraContacts_you_can_only_use_the_camera_button">您可以仅使用相机按钮来发送照片给 Signal 联系人</string>
   <string name="CameraContacts_cant_find_who_youre_looking_for">找不到您要找的人？</string>
   <string name="CameraContacts_invite_a_contact_to_join_signal">邀请联系人加入 Signal</string>
+  <string name="CameraContacts__menu_search">搜索</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">删除</string>
   <string name="ClearProfileActivity_remove_profile_photo">删除头像</string>
@@ -407,6 +409,7 @@
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="other">您最多分享 %d 项。</item>
   </plurals>
+  <string name="MediaSendActivity_select_recipients_description">选择收件人</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">所有媒体</string>
   <!--MessageRecord-->
@@ -730,6 +733,11 @@
   <string name="WebRtcCallScreen_end_call">结束呼叫</string>
   <!--WebRtcCallControls-->
   <string name="WebRtcCallControls_tap_to_enable_your_video">点击以启用视频</string>
+  <!--WebRtcCallControls Content Descriptions-->
+  <string name="WebRtcCallControls_contact_photo_description">联系人照片</string>
+  <string name="WebRtcCallControls_speaker_button_description">扬声器</string>
+  <string name="WebRtcCallControls_mute_button_description">静音</string>
+  <string name="WebRtcCallControls_answer_call_description">接听</string>
   <!--attachment_type_selector-->
   <string name="attachment_type_selector__audio">音频</string>
   <string name="attachment_type_selector__audio_description">音频</string>
@@ -752,6 +760,7 @@
   <string name="change_passphrase_activity__repeat_new_passphrase">校验新密码</string>
   <!--contact_selection_activity-->
   <string name="contact_selection_activity__enter_name_or_number">输入姓名或号码</string>
+  <!--contact_filter_toolbar-->
   <!--contact_selection_group_activity-->
   <string name="contact_selection_group_activity__no_contacts">没有联系人。</string>
   <string name="contact_selection_group_activity__finding_contacts">读取联系人…</string>
@@ -936,8 +945,6 @@
   <string name="recipient_preferences__ringtone">铃声</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Signal 呼叫</string>
-  <string name="redphone_call_controls__mute">静音</string>
-  <string name="redphone_call_controls__flip_camera_rear">切换摄像头</string>
   <!--registration_activity-->
   <string name="registration_activity__phone_number">电话号码</string>
   <string name="registration_activity__registration_will_transmit_some_contact_information_to_the_server_temporariliy">Signal 使用您的电话号码以及您手机上的联系人来更好地帮助您沟通。如此，已经了解您的联系方式的朋友及联系人将能够更轻松地使用 Signal 来与您联络。\n\n注册时联系人将会被上传到服务器，但是他们不会被保存在服务器上。</string>
